Se agrego validacion de cantidades con decimales en los productos, se modifico la estetica del carrito, se agrego un boton que vacie el carrito

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <!-- Aca se agregan los items -->
                 <table id="carrito"></table>
 
+                <button id="btnVaciarCarrito">Vaciar Carrito</button>
                 <div class="centrado">
                     <p id="total"></p>
                     <button id="btnTotal">Comprar</button>
